--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@
   
   button {
     width: 150px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.973);
     border: 3px solid black;
     color: black;
     padding: 3px;
